fixed imgtocheck bug, added giftocheck, made it easier to add own apps, changed requirements and readme

--- a/displayboard/config.json
+++ b/displayboard/config.json
@@ -1,5 +1,5 @@
 {
-    "text": "New test sentence!",
+    "text": "New test sentence",
     "speed": 0.1,
     "length": 40,
     "color": "#000000",
