--- a/giftocheck/config.json
+++ b/giftocheck/config.json
@@ -1,1 +1,1 @@
-{"x": 69, "y": 41, "enabled": true, "selected": true, "color": true}
+{"x": 69, "y": 41, "enabled": false, "selected": false, "color": false}
